samples/_failures_safe/1761497725_6b662f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_43b4a932.c: In function ‘tokenize’:
./samples/SAFE/__tmp_43b4a932.c:164:13: error: expected expression at end of input
  164 |             if (token_count < max_tokens)
      |             ^~
./samples/SAFE/__tmp_43b4a932.c:164:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_43b4a932.c:164:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_43b4a932.c:164:13: error: expected declaration or statement at end of input
